# church-web-site-with-auth

./: .gitignore  LICENSE  README.md  compose.yaml
web-api/: Containerfile  Containerfile.yaml  README.md  pyproject.toml
web-api/nginx/: nginx.conf
web-api/web_api/: main.py  models.py  repository.py  schemas.py  schemes.py  sql_app.db
web-api/web_api/middlewares/: auth.py  cors.py
web-api/web_api/routers/: accounts.py  addresses.py  small_groups.py
web-app/: .env.development  .env.production  .env.staging  Containerfile  README.md  index.html  package-lock.json  package.json  vite.config.js
web-app/src/: App.vue  main.js
web-app/src/assets/: main.css
web-app/src/assets/css/fontawesome-free-6.5.2-web/css/: all.css  all.min.css  brands.min.css  fontawesome.css  fontawesome.min.css  regular.css  regular.min.css  solid.min.css  svg-with-js.css  svg-with-js.min.css  v4-font-face.css  v4-font-face.min.css  v4-shims.css  v4-shims.min.css  v5-font-face.css  v5-font-face.min.css
web-app/src/components/: PageHeader.vue
web-app/src/components/loyout/: FooterComponent.vue  NavbarMenu.vue
web-app/src/components/small-groups/: SmallGroupFilter.vue  SmallGroupTable.vue
web-app/src/resources/: auth.js  index.js  small-group.js
web-app/src/router/: index.js
web-app/src/storage/: auth-resource.js  small-group-resource.js  weekday-resourse.js
web-app/src/store/: auth.js  small-group.js
web-app/src/views/: HomeView.vue
web-app/src/views/auth/: LogInView.vue
web-app/src/views/small-groups/: SmallGroupDetailsView.vue  SmallGroupsView.vue
(+26 files in other folders)
