[tool.poetry]
name = "web-api"
version = "0.1.0"
description = ""
authors = ["Felipe Brum <fbrump@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.110.0"
uvicorn = {extras = ["standard"], version = "^0.29.0"}
black = "^24.3.0"
sqlalchemy = "^2.0.30"
passlib = "^1.7.4"
pyjwt = "^2.8.0"
python-multipart = "^0.0.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
